syntax = "proto3";

package integration;

import "../commons.proto";

// HIS Authentication Request
message HisLoginRequest {
  string username = 1;
  string password = 2;
  string deviceId = 3;
  string ipAddress = 4;
  string userAgent = 5;
}

// HIS Role Information
message HisRole {
  string roleCode = 1;
  string roleName = 2;
}

// HIS User Information
message HisUserInfo {
  string loginName = 1;
  string userName = 2;
  string applicationCode = 3;
  string gCode = 4;
  string email = 5;
  string mobile = 6;
  repeated HisRole roles = 7;
}

// HIS Login Response
message HisLoginResponse {
  bool success = 1;
  string message = 2;
  string tokenCode = 3;
  string renewCode = 4;
  string loginTime = 5;
  string expireTime = 6;
  string validAddress = 7;
  string loginAddress = 8;
  string versionApp = 9;
  string machineName = 10;
  string lastAccessTime = 11;
  HisUserInfo user = 12;
}

// User Synchronization Request
message SyncUserRequest {
  HisUserInfo user = 1;
}

// User Synchronization Response
message SyncUserResponse {
  string userId = 1;
  bool created = 2;
  string username = 3;
  string email = 4;
}

// Get Token Request
message GetTokenRequest {
  string userId = 1;
}

// Get Token Response
message GetTokenResponse {
  bool found = 1;
  string tokenCode = 2;
  string renewCode = 3;
  string expireTime = 4;
  string loginTime = 5;
}

// Invalidate Token Request
message InvalidateTokenRequest {
  string userId = 1;
}

// Renew Token Request
message RenewTokenRequest {
  string renewCode = 1;
  string userId = 2; // Optional: for logging and Redis update
}

// Renew Token Response
message RenewTokenResponse {
  bool success = 1;
  string message = 2;
  string tokenCode = 3;
  string renewCode = 4;
  string loginTime = 5;
  string expireTime = 6;
  string validAddress = 7;
  string loginAddress = 8;
  string versionApp = 9;
  string machineName = 10;
  string lastAccessTime = 11;
}

// Enrich Data Request
message EnrichDataRequest {
  string username = 1; // Username to enrich
}

// Enrich Data Response
message EnrichDataResponse {
  bool success = 1;
  int32 totalRecords = 2;
  int32 processedRecords = 3;
  int32 failedRecords = 4;
  string message = 5;
}

// --- Status & Summary Definitions ---

message ExportStatus {
  string id = 1;
  string code = 2;
  string name = 3;
}

message MedicineSummary {
  string medicineCode = 1;
  string medicineName = 2;
  string serviceUnitCode = 3;
  string serviceUnitName = 4;
  double amount = 5;
  repeated int64 hisIds = 6;
  
  // Export status
  bool is_exported = 7;
  string exportedByUser = 8;
  int64 exportedTime = 9;
  
  // Actual Export status
  bool is_actual_exported = 10;
  string actualExportedByUser = 11;
  int64 actualExportedTime = 12;
  
  // Enriched User Info
  UserInfo exportedByUserInfo = 13;
  UserInfo actualExportedByUserInfo = 14;
}

message UserInfo {
  string id = 1;
  string username = 2;
  string email = 3;
  string firstName = 4;
  string lastName = 5;
}

// --- Sync Requests/Responses ---

message SyncInpatientExpMestRequest {
  int64 expMestId = 1; // HIS ID
  string userId = 2;
}

message SyncExpMestOtherRequest {
  int64 expMestId = 1; // HIS ID
  string userId = 2;
}

message SyncResponse {
  bool success = 1;
  string message = 2;
  string expMestId = 3; // Local UUID
  int64 hisExpMestId = 4;
  string workingStateId = 5;
  ExportStatus working_state = 6;
}

message GetInpatientExpMestSummaryFromHisRequest {
  int64 expMestId = 1; // HIS ID (aggrExpMestId)
  string orderBy = 2;
  string userId = 3;
}

message InpatientExpMestSummaryFromHisResponse {
  int64 expMestId = 1;
  string expMestCode = 2;
  string mediStockCode = 3;
  string mediStockName = 4;
  string reqDepartmentCode = 5;
  string reqDepartmentName = 6;
  repeated MedicineSummary medicines = 7;
}

message EnrichExpMestsWithSyncStatusRequest {
  repeated int64 expMestIds = 1; // HIS IDs
  string expMestType = 2; // "inpatient" | "other"
}

message EnrichExpMestsWithSyncStatusResponse {
  map<int64, bool> syncStatusMap = 1; // expMestId -> is_sync
  map<int64, string> workingStateIdMap = 2; // expMestId -> workingStateId
  map<string, ExportStatus> workingStateMap = 3; // workingStateId -> ExportStatus
}

message AutoUpdateExpMestSttIdRequest {
  repeated int64 expMestIds = 1; // HIS IDs
  string expMestType = 2; // "inpatient" | "other"
}

message AutoUpdateExpMestSttIdResponse {
  int32 updatedCount = 1;
  repeated int64 updatedExpMestIds = 2;
}

service IntegrationService {
  // Auth
  rpc hisLogin (HisLoginRequest) returns (HisLoginResponse) {}
  rpc syncUser (SyncUserRequest) returns (SyncUserResponse) {}
  rpc getToken (GetTokenRequest) returns (GetTokenResponse) {}
  rpc invalidateToken (InvalidateTokenRequest) returns (commons.Count) {}
  rpc renewToken (RenewTokenRequest) returns (RenewTokenResponse) {}
  rpc enrichData (EnrichDataRequest) returns (EnrichDataResponse) {}
  
  // Sync methods (NEW)
  rpc SyncInpatientExpMest (SyncInpatientExpMestRequest) returns (SyncResponse) {}
  rpc SyncExpMestOther (SyncExpMestOtherRequest) returns (SyncResponse) {}
  
  // Summary methods (NEW)
  rpc GetInpatientExpMestSummaryFromHis (GetInpatientExpMestSummaryFromHisRequest) returns (InpatientExpMestSummaryFromHisResponse) {}
  
  // Enrichment methods (NEW)
  rpc EnrichExpMestsWithSyncStatus (EnrichExpMestsWithSyncStatusRequest) returns (EnrichExpMestsWithSyncStatusResponse) {}
  
  // Auto-update methods (NEW)
  rpc AutoUpdateExpMestSttId (AutoUpdateExpMestSttIdRequest) returns (AutoUpdateExpMestSttIdResponse) {}
}
